수정 : 1차 수정

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
                 <!-- 가이드 섹션 -->
                 <div class="guide-section">
                     <!-- 카드 작업 여기서 하세요! (경민, 여민) -->
+                     <div class="card-slider">
+                        <button class="arrow left">&#10094;</button>
+                        <div class="cards-container">
+                        <div class="card">카드 1</div>
+                        <div class="card">카드 2</div>
+                        <div class="card">카드 3</div>
+                        <div class="card">카드 4</div>
+                        </div>
+                        <button class="arrow right">&#10095;</button>
+                    </div>
                 </div>
             </div>
 
