--- a/index.html
+++ b/index.html
@@ -56,18 +56,22 @@
 
                 <!-- 가이드 섹션 -->
                 <div class="guide-section">
-                    <!-- 카드 작업 여기서 하세요! (경민, 여민) -->
-                     <div class="card-slider">
-                        <button class="arrow left">&#10094;</button>
+                    <div class="card-slider">
+                        <button class="prev-btn">❮</button>
+                        <div class="cards-wrapper">
                         <div class="cards-container">
-                        <div class="card">카드 1</div>
-                        <div class="card">카드 2</div>
-                        <div class="card">카드 3</div>
-                        <div class="card">카드 4</div>
+                            <div class="card">카드 1</div>
+                            <div class="card">카드 2</div>
+                            <div class="card">카드 3</div>
+                            <div class="card">카드 4</div>
                         </div>
-                        <button class="arrow right">&#10095;</button>
+                        </div>
+                        <button class="next-btn">❯</button>
                     </div>
-                </div>
+                    </div>
+
+
+
             </div>
 
             <!-- 우측: 지도 -->
