추가: 슬라이더 및 링크삽입

--- a/index.html
+++ b/index.html
@@ -57,19 +57,26 @@
 
                 <!-- 가이드 섹션 -->
                 <div class="guide-section">
-                    <div class="card-slider">
-                        <button class="prev-btn">❮</button>
-                            <div class="cards-wrapper">
-                                <div class="cards-container">
-                                    <div class="card">카드 1</div>
-                                    <div class="card">카드 2</div>
-                                    <div class="card">카드 3</div>
-                                    <div class="card">카드 4</div>
-                                </div>
-                            </div>
-                        <button class="next-btn">❯</button>
+                    <input type="range" min="0" max="3" value="1" class="slider" id="levelSlider">
+                    <div class="levels">
+                        <span id="label0">좋음</span>
+                        <span id="label1">보통</span>
+                        <span id="label2">나쁨</span>
+                        <span id="label3">매우나쁨</span>
                     </div>
-                </div>
+                        <div class="card-slider">
+                            <button class="prev-btn">❮</button>
+                                <div class="cards-wrapper">
+                                    <div class="cards-container">
+                                        <div class="card">카드 1</div>
+                                        <div class="card">카드 2</div>
+                                        <div class="card">카드 3</div>
+                                        <div class="card">카드 4</div>
+                                    </div>
+                                </div>
+                            <button class="next-btn">❯</button>
+                        </div>
+                    </div>
             </div>
 
             <!-- 우측: 지도 -->
