주석 추가 및 수정정

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
                 <!-- 가이드 섹션 -->
                 <div class="guide-section">
+                    <!-- 슬라이더 추가 -->
                     <input type="range" min="0" max="3" value="1" class="slider" id="levelSlider">
                     <div class="levels">
                         <span id="label0">좋음</span>
@@ -64,6 +65,7 @@
                         <span id="label2">나쁨</span>
                         <span id="label3">매우나쁨</span>
                     </div>
+                        <!-- 카드 부분 -->
                         <div class="card-slider">
                             <button class="prev-btn">❮</button>
                                 <div class="cards-wrapper">
