카테고리 추가에 따른 수정정

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
 
                 <!-- 가이드 섹션 -->
                 <div class="guide-section">
+                    <!-- 버튼 추가 -->
+                    <div class="age-buttons">
+                        <button data-age="parent">(아이가 있는)부모</button>
+                        <button data-age="adult">대학생/성인</button>
+                        <button data-age="senior">노년층</button>
+                    </div>
                     <!-- 슬라이더 추가 -->
                     <input type="range" min="0" max="3" value="1" class="slider" id="levelSlider">
                     <div class="levels">
